# mir2-rust1

./: .gitignore  Cargo.toml  build.rs  check_brackets.py  slint.toml  temp_cargo.patch
scripts/: convert_palette.py
src/: error.rs  main.rs  main_gui.rs
src/formats/: mlibrary_v0.rs  mlibrary_v1.rs  mlibrary_v2.rs  mod.rs  wemade_library.rs  wtl_library.rs
src/gui/: mod.rs
src/image/: bitmap.rs  compression.rs  mod.rs  palette.rs  palette_data.rs
ui/: app_window.slint  theme.slint
ui/components/: icon_button.slint  preview_panel.slint  property_panel.slint  settings_dialog.slint  status_bar.slint  thumbnail_grid.slint  thumbnail_item.slint  toolbar.slint
ui/lib/: @lucide.slint
