[package]
name = "library_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
# 图像处理
image = "0.25"
png = "0.17"

# 压缩库
flate2 = "1.0"

# 二进制读写
byteorder = "1.5"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 序列化
serde = { version = "1.0", features = ["derive"] }

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 异步运行时
tokio = { version = "1.35", features = ["full"] }

# 文件对话框 (GUI 启用时需要)
# rfd = "0.14"

[build-dependencies]
# slint-build = "1.8"  # GUI 构建依赖，暂时禁用
